Add a CSS class to slug widgets

--- a/src/pretix/control/templates/pretixcontrol/slug_widget.html
+++ b/src/pretix/control/templates/pretixcontrol/slug_widget.html
@@ -1,4 +1,4 @@
-<div class="form-inline helper-display-inline">
+<div class="form-inline helper-display-inline slug-widget">
     {{ pre }}
     <input type="{{ widget.type }}" name="{{ widget.name }}"
             {% if widget.value != None %}value="{{ widget.value }}"{% endif %}
