--- a/src/pretix/control/templates/pretixcontrol/auth/login.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "pretixcontrol/auth/base.html" %}
 {% load bootstrap3 %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
     <form class="form-signin" action="" method="post">
         {% bootstrap_form_errors form type='all' layout='inline' %}
