--- a/src/pretix/control/templates/pretixcontrol/auth/oauth_authorization.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/oauth_authorization.html
@@ -1,6 +1,6 @@
 {% extends "pretixcontrol/auth/base.html" %}
 {% load bootstrap3 %}
-{% load staticfiles %}
+{% load static %}
 {% load i18n %}
 {% block content %}
     {% if not error %}
