--- a/src/pretix/control/templates/pretixcontrol/event/index.html
+++ b/src/pretix/control/templates/pretixcontrol/event/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load eventurl %}
 {% load bootstrap3 %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}{{ request.event.name }}{% endblock %}
 {% block content %}
     <h1>
