--- a/src/pretix/control/templates/pretixcontrol/user/reauth.html
+++ b/src/pretix/control/templates/pretixcontrol/user/reauth.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load compress %}
-{% load staticfiles %}
+{% load static %}
 {% block content %}
     <form class="form-signin" id="u2f-form" action="" method="post">
         {% csrf_token %}
