--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -1,6 +1,6 @@
 {% extends "pretixpresale/base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% load thumb %}
 {% load eventurl %}
 {% load safelink %}
