--- a/src/pretix/presale/templates/pretixpresale/widget_dummy.html
+++ b/src/pretix/presale/templates/pretixpresale/widget_dummy.html
@@ -1,5 +1,5 @@
 {% load compress %}
-{% load staticfiles %}
+{% load static %}
 {% compress css %}
     <link rel="stylesheet" type="text/x-scss" href="{% static "pretixpresale/scss/widget.scss" %}"/>
 {% endcompress %}
