--- a/src/pretix/control/templates/pretixcontrol/pdf/index.html
+++ b/src/pretix/control/templates/pretixcontrol/pdf/index.html
@@ -1,6 +1,6 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% load compress %}
 {% block title %}{% trans "PDF Editor" %}{% endblock %}
 {% block custom_header %}
