--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -1,7 +1,7 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
 {% load compress %}
-{% load staticfiles %}
+{% load static %}
 {% load escapejson %}
 {% block title %}{% trans "Statistics" %}{% endblock %}
 {% block content %}
