--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -320,7 +320,7 @@
                 <div class="impersonate-warning">
                     <span class="fa fa-bell"></span>
                     {{ global_settings.banner_message }}
-                    {% if global_settings.banner_message %}
+                    {% if global_settings.banner_message_detail %}
                         <a href="{% url 'control:global.message' %}">
                             {% trans "Read more" %}
                         </a>
