Center free price input for consistency
Looks better in Firefox, too

--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -14,7 +14,7 @@
         margin-bottom: 3px;
     }
     .input-item-price {
-        text-align: right;
+        text-align: center;
     }
     .availability-box {
         text-align: center;
