--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -41,6 +41,7 @@
                 <fieldset>
                     <legend>{% trans "Additional settings" %}</legend>
                     {% bootstrap_field form.original_price addon_after=request.event.currency layout="control" %}
+                    {% bootstrap_field form.require_approval layout="control" %}
                     {% for f in plugin_forms %}
                         {% bootstrap_form f layout="control" %}
                     {% endfor %}
