--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
@@ -13,3 +13,4 @@
 {% else %}
     <script type="text/plain" id="stripe_pubkey">{{ settings.publishable_key }}</script>
 {% endif %}
+    <script type="text/plain" id="stripe_merchantcountry">{{ settings.merchant_country }}</script>
