--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
@@ -13,4 +13,7 @@
 {% else %}
     <script type="text/plain" id="stripe_pubkey">{{ settings.publishable_key }}</script>
 {% endif %}
+{% if settings.connect_user_id %}
+    <script type="text/plain" id="stripe_connectedAccountId">{{ settings.connect_user_id }}</script>
+{% endif %}
     <script type="text/plain" id="stripe_merchantcountry">{{ settings.merchant_country }}</script>
