Fix going back in payment flow

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -30,7 +30,7 @@
         </div>
     {% endif %}
 
-    <div class="row equal">
+    <div class="row equal" id="stripe-elements">
       <div class="col-md-5 vcenter hidden">
         <div id="stripe-payment-request-button">
           <span class="fa fa-spinner fa-spin"></span>
