--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -57,6 +57,7 @@
             Your payment will be processed by Stripe, Inc. Your credit card data will be transmitted directly to
             Stripe and never touches our servers.
         {% endblocktrans %}
+        <input type="hidden" name="stripe_total" value="{{ total }}" id="stripe_total"/>
         <input type="hidden" name="stripe_token" value="{{ request.session.payment_stripe_token }}" id="stripe_token"/>
         <input type="hidden" name="stripe_card_last4" value="{{ request.session.payment_stripe_last4 }}"
                 id="stripe_card_last4"/>
