--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
@@ -16,4 +16,4 @@
 {% if settings.connect_user_id %}
     <script type="text/plain" id="stripe_connectedAccountId">{{ settings.connect_user_id }}</script>
 {% endif %}
-    <script type="text/plain" id="stripe_merchantcountry">{{ settings.merchant_country }}</script>
+    <script type="text/plain" id="stripe_merchantcountry">{{ settings.merchant_country|default:"" }}</script>
