--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -24,27 +24,40 @@
             {% csrf_token %}
             <div class="btn-toolbar" role="toolbar">
                 <div class="btn-group" role="group">
-                    {% if order.status == 'n' or order.status == 'e' %}
-                        <a href="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}?status=p"
-                                class="btn {% if overpaid >= 0 %}btn-primary{% else %}btn-default{% endif %}">
-                            {% trans "Mark as paid" %}
+                    {% if order.require_approval and order.status == 'n' %}
+                        <a href="{% url "control:event.order.approve" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}"
+                                class="btn btn-primary">
+                            <span class="fa fa-thumbs-up"></span>
+                            {% trans "Approve" %}
                         </a>
-                        <a href="{% url "control:event.order.extend" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default">
-                            {% trans "Extend payment term" %}
+                        <a href="{% url "control:event.order.deny" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}"
+                                class="btn btn-danger">
+                            <span class="fa fa-thumbs-down"></span>
+                            {% trans "Deny" %}
                         </a>
-                    {% endif %}
-                    {% if order.cancel_allowed %}
-                        <a href="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}?status=c" class="btn btn-default">
-                            {% trans "Cancel order" %}
-                        </a>
-                    {% endif %}
-                    {% if order.status == 'p' %}
-                        <button name="status" value="n" class="btn btn-default">{% trans "Mark as not paid" %}</button>
-                    {% endif %}
-                    {% if overpaid|add:order.total != 0 %}
-                        <a href="{% url "control:event.order.refunds.start" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default">
-                            {% trans "Create a refund" %}
-                        </a>
+                    {% else %}
+                        {% if order.status == 'n' or order.status == 'e' %}
+                            <a href="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}?status=p"
+                                    class="btn {% if overpaid >= 0 %}btn-primary{% else %}btn-default{% endif %}">
+                                {% trans "Mark as paid" %}
+                            </a>
+                            <a href="{% url "control:event.order.extend" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default">
+                                {% trans "Extend payment term" %}
+                            </a>
+                        {% endif %}
+                        {% if order.cancel_allowed %}
+                            <a href="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}?status=c" class="btn btn-default">
+                                {% trans "Cancel order" %}
+                            </a>
+                        {% endif %}
+                        {% if order.status == 'p' %}
+                            <button name="status" value="n" class="btn btn-default">{% trans "Mark as not paid" %}</button>
+                        {% endif %}
+                        {% if overpaid|add:order.total != 0 %}
+                            <a href="{% url "control:event.order.refunds.start" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}" class="btn btn-default">
+                                {% trans "Create a refund" %}
+                            </a>
+                        {% endif %}
                     {% endif %}
 
                     <a href="{% eventurl request.event "presale:event.order" order=order.code secret=order.secret %}"
