--- a/src/pretix/control/templates/pretixcontrol/orders/fragment_order_status.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/fragment_order_status.html
@@ -1,7 +1,11 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% if order.status == "n" %}
-    <span class="label label-warning {{ class }}">{% trans "Pending" %}</span>
+    {% if order.require_approval %}
+        <span class="label label-warning {{ class }}">{% trans "Approval pending" %}</span>
+    {% else %}
+        <span class="label label-warning {{ class }}">{% trans "Pending" %}</span>
+    {% endif %}
 {% elif order.status == "p" %}
     <span class="label label-success {{ class }}">{% trans "Paid" %}</span>
 {% elif order.status == "e" %} {# expired #}
